--- a/App-Mobile-Android/Gemfile
+++ b/App-Mobile-Android/Gemfile
@@ -1,6 +1,7 @@
 # Gemfile to help setting up the initial development environment
 source 'https://rubygems.org'
 
+gem "cucumber"
 gem 'calabash-common'
 gem 'calabash-android'
 gem 'pry'
